feat: subjects by visits lectures
