# internal/http/handlers/visits/dto.go
@@ -1,0 +1,11 @@
+package visits
+
+type SubjectDTO struct {
+	ID   int64  `json:"id"`
+	Name string `json:"name"`
+}
+
+type GetVisitedSubjectsResponse struct {
+	ISU      string       `json:"isu"`
+	Subjects []SubjectDTO `json:"subjects"`
+}
